# Tentacle

./: AGENTS.md  README.md  app.py  pyproject.toml  sample1.txt  sample1_original.txt  sample2_original.txt  style.tcss  test_file.txt  test_markdown.md
tentacle/: animated_logo.py  custom_figlet_widget.py  development_plan.md  diff_markdown.py  gac_integration.py  git_diff_viewer.py  git_status_sidebar.py  long_file.py  main.py  next_steps.md  style.tcss  test_plan.md
